<resources>
    <string name="app_name">Calories Counter</string>
    <string name="action_settings">Settings</string>
    <string name="food">Food</string>
    <string name="weight">Gr</string>
    <string name="fat">Fat</string>
    <string name="carbs">Carbs</string>
    <string name="kcal">kcal</string>
    <string name="protein">Prot</string>

    <string name="fat_lbl">Fat:</string>
    <string name="carbs_lbl">Carbs:</string>
    <string name="kcal_lbl">kcal:</string>
    <string name="protein_lbl">Prot:</string>

    <string name="add">Add</string>
    <string name="enter_product_hint">Start entering food name</string>
    <string name="no_products_found">No match found</string>
    <string name="product_name_hint">Enter food name</string>
    <string name="in_100_gr">In 100 gr:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_empty_name">Name must not be empty</string>
    <string name="error_empty_value">Value must not be empty</string>
    <string name="weight_dialog_title">Enter weight of %s in grams</string>
    <string name="age">Age:</string>
    <string name="years">Years</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="current_weight">Current weight:</string>
    <string name="kilos">Kilos</string>
    <string name="height">Height:</string>
    <string name="cm">Cm</string>
    <string name="exercise_level">Exercise level:</string>
    <string name="goal">Goal:</string>
    <string name="total_kcal">Daily Calorie Needs: %d kcal</string>
    <string name="history_fcp">%1$d/%2$d/%3$d</string>
    <string name="history_kcal">%s kcal</string>
    <string name="today_fcp">Fat: %1$d Carbohydrate: %2$d Protein: %3$d</string>
    <string name="date_today">Today, %s</string>
    <string name="date">Date</string>
    <string name="fcp">Fat/Carbs/Protein</string>
    <string name="delete_item">Delete %s?</string>
    <string name="ok">Ok</string>
    <string name="no_connection_warning">No internet access. Only offline search is available.</string>
    <string name="no_connection_error">Something went wrong. Check your internet connection and try again.</string>
    <string name="settings">Settings</string>
    <string name="cd_weight">Weight in grams</string>
    <string name="cd_height">Height in cm</string>
    <string name="widget_kcal">%1$d/%2$d kcal</string>

    <string name="widget_name">Calories Counter Widget</string>

    <string-array name="exercise_array">
        <item>Little/no exercise</item>
        <item>3 times/week</item>
        <item>5 times/week</item>
        <item>3 times/week (intense)</item>
        <item>Daily</item>
        <item>Daily (intense) or twice daily</item>
        <item>Daily exercise + physical job</item>
    </string-array>

    <string-array name="goals_array">
        <item>Weight Maintenance </item>
        <item>Fat Loss</item>
        <item>Extreme Fat Loss</item>
    </string-array>
</resources>
