<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="false">

    <TextView
        android:id="@+id/tv_food_name"
        style="@style/TableCellTheme"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:text="@string/food" />

    <TextView
        android:id="@+id/tv_weight"
        style="@style/TableCellTheme"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/weight" />

    <TextView
        android:id="@+id/tv_fat"
        style="@style/TableCellTheme"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/fat" />

    <TextView
        android:id="@+id/tv_carbs"
        style="@style/TableCellTheme"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/carbs" />

    <TextView
        android:id="@+id/tv_prot"
        style="@style/TableCellTheme"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/protein" />

    <TextView
        android:id="@+id/tv_kcal"
        style="@style/TableCellTheme"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/kcal" />
</TableRow>