<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ll_root"
    android:background="@color/colorBg"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_food_name"
        style="@style/TableCellHeaderTheme"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/food" />

    <TextView
        android:id="@+id/tv_weight"
        style="@style/TableCellHeaderTheme"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/weight" />

    <TextView
        android:id="@+id/tv_fat"
        style="@style/TableCellHeaderTheme"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/fat" />

    <TextView
        android:id="@+id/tv_carbs"
        style="@style/TableCellHeaderTheme"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/carbs" />

    <TextView
        android:id="@+id/tv_prot"
        style="@style/TableCellHeaderTheme"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/protein" />

    <TextView
        android:id="@+id/tv_kcal"
        style="@style/TableCellHeaderTheme"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/kcal" />
</LinearLayout>