<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="false">

    <TextView
        android:id="@+id/tv_food_name"
        style="@style/TableCellTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:ellipsize="end"
        android:paddingLeft="@dimen/dialog_text_padding"
        android:paddingStart="@dimen/dialog_text_padding"
        android:singleLine="true"
        android:text="@string/food" />

    <TextView
        android:id="@+id/tv_weight"
        style="@style/TableCellTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/weight" />

    <TextView
        android:id="@+id/tv_fat"
        style="@style/TableCellTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fat" />

    <TextView
        android:id="@+id/tv_carbs"
        style="@style/TableCellTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/carbs" />

    <TextView
        android:id="@+id/tv_prot"
        style="@style/TableCellTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/protein" />

    <TextView
        android:id="@+id/tv_kcal"
        style="@style/TableCellTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/kcal" />
</LinearLayout>