<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@android:color/white"
        android:padding="@dimen/dialog_padding">

        <TextView
            android:id="@+id/tv_kcal_total"
            style="@style/TextStyleTitle"
            android:layout_centerHorizontal="true"
            android:text="total" />

        <TextView
            android:id="@+id/tv_age"
            style="@style/TextStyle"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_kcal_total"
            android:layout_marginTop="@dimen/profile_vertical_margin"
            android:text="@string/age" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="@dimen/et_fcp_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tv_age"
            android:maxLength="3"
            android:gravity="center"
            android:hint="@string/years"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_gender"
            style="@style/TextStyle"
            android:layout_below="@id/tv_age"
            android:layout_marginTop="@dimen/profile_vertical_margin"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_gender"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tv_gender"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/dialog_padding"
                android:text="@string/male" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_weight"
            style="@style/TextStyle"
            android:layout_below="@id/tv_gender"
            android:layout_marginTop="@dimen/profile_vertical_margin"
            android:padding="@dimen/dialog_text_padding"
            android:text="@string/current_weight" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="@dimen/et_fcp_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tv_weight"
            android:gravity="center"
            android:hint="@string/kilos"
            android:maxLength="3"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_height"
            style="@style/TextStyle"
            android:layout_below="@id/tv_weight"
            android:layout_marginTop="@dimen/profile_vertical_margin"
            android:padding="@dimen/dialog_text_padding"
            android:text="@string/height" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="@dimen/et_fcp_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tv_height"
            android:gravity="center"
            android:maxLength="3"
            android:hint="@string/cm"
            android:inputType="number" />

        <LinearLayout
            android:id="@+id/ll_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_height"
            android:layout_marginTop="@dimen/profile_vertical_margin">

            <TextView
                android:id="@+id/tv_exercise"
                style="@style/TextStyle"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:padding="@dimen/dialog_text_padding"
                android:text="@string/exercise_level" />

            <Spinner
                android:id="@+id/spinner_exercise"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:padding="0dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_exercise"
            android:layout_marginTop="@dimen/profile_vertical_margin">

            <TextView
                android:id="@+id/tv_goal"
                style="@style/TextStyle"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:padding="@dimen/dialog_text_padding"
                android:text="@string/goal" />

            <Spinner
                android:id="@+id/spinner_goal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="0dip" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_goal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/profile_vertical_margin"
            android:background="@android:color/transparent"
            android:padding="@dimen/dialog_padding"
            android:text="@string/save"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>
</RelativeLayout>