<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_date"
        style="@style/TextStyleHeader"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/date" />

    <TextView
        android:id="@+id/tv_kcal"
        style="@style/TextStyleHeader"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/kcal" />

    <TextView
        android:id="@+id/tv_fcp"
        style="@style/TextStyleHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/fcp" />
</LinearLayout>